--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -24,3 +24,7 @@ main {
     // ======== end import ==========
 
 }
+
+// #btn-move-to-recovery {
+    //     border: 1px solid #dee2e6 !important;
+    // }
