--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -12,7 +12,8 @@ body {
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    // font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .wrapper {
