--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -3,9 +3,7 @@ main {
     // background-repeat: no-repeat;
     // background-size: cover;
     // background-position: left 25%;
-    background-image: url(../images/dest/bg-content.png);
-    background-position: center bottom;
-    background-repeat: no-repeat;
+
 
     // .page-title {
     //     background: rgb(217, 217, 235);
@@ -25,6 +23,6 @@ main {
 
 }
 
-// #btn-move-to-recovery {
-    //     border: 1px solid #dee2e6 !important;
-    // }
+.breadcrumb-sm {
+    font-size: 75%;
+}
