--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -14,6 +14,9 @@ body {
 body {
     // font-family: 'Montserrat', sans-serif;
     font-family: 'Open Sans', sans-serif;
+    background-image: url(../images/dest/bg-content.png);
+    background-position: center bottom;
+    background-repeat: no-repeat;
 }
 
 .wrapper {
