--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -4,8 +4,6 @@ main {
     // background-size: cover;
     // background-position: left 25%;
 
-
-
     .page-title {
         // background: rgb(217, 217, 235);
         // background: linear-gradient(180deg, rgba(217, 217, 235, 1) 0%, rgba(255, 255, 255, 1) 100%);
@@ -15,6 +13,10 @@ main {
         padding-bottom: 0.5rem;
         margin-bottom: 3rem;
         border-bottom: 1px solid rgba(247, 160, 20, 1);
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
     }
 
     .object-status-title {
@@ -34,59 +36,20 @@ main {
         }
     }
 
-    .card-object {
-        margin-bottom: 1.5rem;
+    .navbar-object {
+        .navbar-toggler {
+            border: 0;
+        }
 
-        .card-object-content {
-            display: flex;
+        .navbar-nav {
             flex-direction: column;
-            padding-top: 1rem;
-            padding-bottom: 1rem;
-            height: 100%;
-        }
-
-        .card-title {
-            font-weight: lighter;
-            padding: 0 1rem 1rem 1rem;
-            margin-bottom: 0;
-            border-bottom: 1px solid #dee2e6;
-        }
-
-        .card-text {
-            display: flex;
-            flex-direction: column;
-            margin-bottom: 0.5rem;
-
-            @media (min-width: 576px) {
-                flex-direction: row;
-            }
-        }
-
-        .card-object-footer {
-            display: flex;
-            flex-direction: column;
-            padding: 1rem 1rem 0 1rem;
-            border-top: 1px solid #dee2e6;
-            justify-content: space-between;
-
-            @media (min-width: 576px) {
-                flex-direction: row;
-                align-items: center;
-            }
-        }
-
-        .alternative-content {
-            padding: 1.5rem 1rem 1rem 1rem;
-        }
-
-        .card-object-collapse {
-            padding: 1.5rem 1rem 1rem 1rem;
-            border-top: 1px solid #dee2e6;
+            align-items: flex-start;
         }
     }
 
     // ======== IMPORT =============
-    @import "menu-vertical";
+    @import "card-object";
+    // @import "menu-vertical";
     // @import "owl-carousel";
     // @import "main-doc-list";
     // @import "accordion-main";
