--- a/app/sass/_menu.scss
+++ b/app/sass/_menu.scss
@@ -4,7 +4,10 @@
     background-color: #333333;
     padding-top: 0;
     padding-bottom: 0;
-    border-bottom: 1px solid #F25F25;
+    position: sticky;
+    top: 0;
+    z-index: 1020;
+    // border-bottom: 1px solid #F25F25;
 
     .navbar-brand {
         color: #fff;
@@ -19,7 +22,6 @@
         padding: .25rem .5rem;
         margin-top: 0.5rem;
         margin-bottom: 0.5rem;
-        // background-color: #014974;
         border-color: #fff;
 
         i {
