--- a/app/sass/_card-object.scss
+++ b/app/sass/_card-object.scss
@@ -1,6 +1,12 @@
 .card-object {
     margin-bottom: 1.5rem;
 
+    .card-img-object {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
     .card-object-content {
         display: flex;
         flex-direction: column;
