--- a/app/sass/_card-object.scss
+++ b/app/sass/_card-object.scss
@@ -87,6 +87,16 @@
             font-weight: 600;
         }
     }
+
+    .nav-tabs {
+        .nav-link {
+            color: #0462B1;
+
+            &:hover {
+                color: #0a58ca;
+            }
+        }
+    }
 }
 
 
