--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -4,7 +4,7 @@
 // $warning: #E8A900 !important;
 // $danger: #E83400 !important;
 // $danger-hover: #F3663D !important;
-
+$orange: #fd9843;
 // ======== end Variables ==========
 
 
@@ -99,7 +99,7 @@ a.btn-primary {
 
 .border-orange {
     border-color: #fd9843;
-    
+
 }
 
 .text-primary {
